# BathroomSensor-IDF

./: CMakeLists.txt  gulpfile.js  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.cpp
main/config/: config_manager.cpp  config_manager.h
main/hardware/: hardware.cpp  hardware.h  inbuild_led.h
main/hardware/display/: display.cpp  display.h  lgfx_device.cpp  lgfx_device.h
main/hardware/sensors/: sensor.h  sensor_id.h  sht3x_sensor_device.cpp  sht3x_sensor_device.h
main/hardware/sensors/ld2540/: ld2450.cpp  ld2450.h  target.cpp  target.h  uart.cpp  uart.h  zone.cpp  zone.h
main/homekit/: homekit_definitions.h  homekit_integration.cpp  homekit_integration.h
main/logging/: logger.cpp  logger.h  logging_tags.h
main/ui/: ui2.cpp  ui2.h  ui_boot_screen.cpp  ui_information_screen.cpp  ui_information_screen.h  ui_inter_screen_interface.h  ui_interface.cpp  ui_interface.h  ui_launcher_screen.cpp  ui_launcher_screen.h  ui_main_screen.cpp  ui_main_screen.h  ui_screen.cpp  ui_screen.h  ui_wifi_enroll_screen.cpp  ui_wifi_enroll_screen.h
main/util/async_web_server/: http_request.cpp
main/web_server/: web_server.cpp  web_server.h
static/web/: index.html
