idf_component_register(SRCS "main.cpp"                             
                            "hardware/display/lgfx_device.cpp" 
                            "hardware/display/display.cpp" 
                            "hardware/hardware.cpp" 
                            "hardware/sensors/sht3x_sensor_device.cpp" 
                            "hardware/sensors/ld2540/uart.cpp"
                            "hardware/sensors/ld2540/ld2450.cpp"
                            "hardware/sensors/ld2540/target.cpp"
                            "hardware/sensors/ld2540/zone.cpp"
                            "ui/ui2.cpp"
                            "ui/ui_interface.cpp"
                            "ui/ui_screen.cpp"
                            "ui/ui_boot_screen.cpp"
                            "ui/ui_main_screen.cpp"
                            "ui/ui_information_screen.cpp"
                            "ui/ui_wifi_enroll_screen.cpp"
                            "ui/ui_launcher_screen.cpp"
                            "config/config_manager.cpp"
                            "config/preferences.cpp"
                            "wifi/wifi_sta.cpp"
                            "wifi/wifi_manager.cpp"
                            "wifi/smart_config_wifi_enroll.cpp"
                            "util/helper.cpp"
                            "util/filesystem/filesystem.cpp"
                            "util/async_web_server/http_server.cpp"
                            "util/async_web_server/http_request.cpp"
                            "util/async_web_server/http_response.cpp"
                            "util/async_web_server/http_event_source.cpp"
                            "util/ota.cpp"
                            "util/timer/timer.cpp"
                            "web_server/web_server.cpp"
                            "operations/operations.cpp"
                            "logging/logger.cpp"
                            "logging/commands.cpp"
                            "homekit/homekit_integration.cpp"
                            "generated/display/src/big_panel_font.c"
                            "generated/display/src/humidity.png.c"
                            "generated/display/src/factory_reset.png.c"
                            "generated/display/src/logo.png.c"
                            "generated/display/src/nowifi.png.c"
                            "generated/display/src/wifi.png.c"
                            "generated/display/src/info.png.c"

                    INCLUDE_DIRS "."
                    REQUIRES fatfs spi_flash LovyanGFX lvgl mbedtls esp_wifi 
                             esp_hw_support app_update esp_http_server esp-tls espcoredump
                             esp_idf_lib_helpers i2cdev sht3x button
                             esp_hap_core esp_hap_apple_profiles json_generator)

target_compile_options(${COMPONENT_LIB} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-enum-conversion>)
